# graphlagoon

./: .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  cliff.toml  docker-compose.yml
.github/agents/: skill_backend_debugging.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/: .env.databricks  .env.databricks-localdb  .env.example  Makefile  README.md  pyproject.toml
api/alembic/versions/: 004_refactor_column_config.py  005_add_query_templates.py
api/graphlagoon/: __init__.py  app.py  cli.py  config.py  main.py  similarity.py
api/graphlagoon/alembic/: env.py
api/graphlagoon/alembic/versions/: 001_initial.py  002_add_column_config.py  003_add_schema_types.py  006_add_template_options.py
api/graphlagoon/db/: database.py  lakebase.py  memory_store.py  models.py
api/graphlagoon/middleware/: auth.py
api/graphlagoon/models/: schemas.py
api/graphlagoon/routers/: catalog.py  config.py  explorations.py  graph.py  graph_contexts.py  query_templates.py  similarity.py
api/graphlagoon/services/: cte_prefilter.py  cypher.py  graph_operations.py  snapshot.py  sql_validation.py  warehouse.py
api/graphlagoon/templates/: index.html
api/graphlagoon/utils/: sharing.py
api/tests/: test_catalog_schemas.py  test_cte_prefilter.py  test_graph_error_handling.py  test_sharing_utils.py  test_similarity.py  test_sql_validation.py
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: PricingCards.vue  custom.css  index.ts
docs/dev/: README.md  architecture.md  code-patterns.md  decision-log.md  duvidas_e_decisoes.md  nested-sbm.md  potential-bugs.md  specifications.md  technical-debts.md
docs/guide/: configuration.md  getting-started.md  integration.md  similarity.md
frontend/: Makefile  capture_ctx.mjs  capture_final.mjs  capture_ui.mjs  capture_ui2.mjs  capture_ui3.mjs  capture_ui4.mjs  capture_ui5.mjs  capture_viz.mjs  capture_viz2.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/e2e/: perf-report.ts  playwright.config.ts  playwright.integration.config.ts
frontend/e2e/fixtures/: integration-fixtures.ts  mock-data.ts  test-fixtures.ts
frontend/e2e/helpers/: api-mocks.ts
frontend/ext-3d-force/: three-webgpu-shim.js
frontend/playwright-report-integration/: index.html
frontend/src/: App.vue  main.ts  shims-glsl.d.ts  vite-env.d.ts
scripts/: build_wheel.sh
scripts/ieee_cis_fraud/: README.md  build_fraud_graph.py  config.py  requirements.txt
warehouse/: .env.example  Makefile  pyproject.toml
warehouse/src/: config.py  main.py
warehouse/src/models/: schemas.py
warehouse/src/routers/: catalog.py  graph.py  statements.py
warehouse/src/services/: catalog.py  graph.py  spark.py
(+135 files in other folders)
